--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 THROTTLE_PER_FIVE_MINS = '100'
-JSON_RPC_PROVIDER_43113= https://api.avax-test.network/ext/bc/C/rpc
-JSON_RPC_PROVIDER_9000= http://157.90.208.234:8545
-JSON_RPC_PROVIDER_9001= https://evmos-json-rpc.stakely.io
+JSON_RPC_PROVIDER_43113=https://api.avax-test.network/ext/bc/C/rpc
+JSON_RPC_PROVIDER_9000=http://157.90.208.234:8545
+JSON_RPC_PROVIDER_9001=https://evmos-json-rpc.stakely.io
+
+# to-do -
+# aggregate and rotate endpoints
