update: lower conc. and timeout as suggested

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 THROTTLE_PER_FIVE_MINS = '100'
-JSON_RPC_PROVIDER_43113=https://api.avax-test.network/ext/bc/C/rpc
-JSON_RPC_PROVIDER_9000=http://157.90.208.234:8545
-JSON_RPC_PROVIDER_9001=https://g.w.lavanet.xyz:443/gateway/evmos/json-rpc-http/59eaa30968cfe9b9bcbd6222c0f0b062
+
+JSON_RPC_PROVIDER_9001=https://evmos-mainnet.blastapi.io/9a419db1-6aab-4126-875f-70bb122c0bdf
 
 # to-do -
 # aggregate and rotate endpoints
